--- a/网络文章尝试/深度拷贝.md
+++ b/网络文章尝试/深度拷贝.md
@@ -94,7 +94,7 @@
 　　虽然我们已经过滤了非自身属性，但如果属性值等于对象本身就会陷入递归死循环。如何解决这个问题？其实很简单，加一个判断就行，判断`obj[key]`是否等于`obj`即可。
 
 　　所以在代码中添加上一个判断，即可避免属性值等于属性的情况发生，修改完善后的代码如下：
-```javascript
+```diff
     // 创建 deepClone 函数
     var deepClone = function fn(obj){
         // 如果是非对象类型，直接返回
