--- a/网络文章尝试/深度拷贝.md
+++ b/网络文章尝试/深度拷贝.md
@@ -120,3 +120,167 @@
         return newObj;
     }
 ```
+　　最终完成的方法如下：
+```javascript
+    // 创建 deepClone 函数
+    var deepClone = function fn(obj){
+        // 如果是非对象类型，直接返回
+        if(typeof obj !== 'object' || obj === null)return obj;
+        // 如果是正则或者是时间对象，则返回新的对象
+        // obj.constructor 返回对象的构造函数
+        if(obj instanceof RegExp || obj instanceof Date) return new obj.constructor(obj);
+        // 复杂数据类型，数组创建新的数组，对象创建新的对象
+        let newObj = new obj.constructor();
+        for(let k in obj){
+            // 判断该属性是否为自身属性
+            // 递归复制
+            if(obj.hasOwnProperty(k)){
+                if(obj[k] === obj){
+                    newObj[k] = newObj;
+                }else{
+                    newObj[k] = fn(obj[k]);
+                }
+            }
+            
+        }
+        return newObj;
+    }
+```
+
+　　测试编写的方法是否成功：
+```javascript
+    // 测试一：原型链
+    function Person(name,six){
+        this.name = name;
+        this.six = six;
+    }
+    person.prototype.category = '人属';
+    function Bryan(job,skill){
+        this.job = job;
+        this.skill = skill;
+    }
+    Bryan.prototype = new Person('Bryan','男');
+    var boy1 = new Bryan('programmer',[['HTML','CSS','JavaScript']]);
+    console.info(boy1);
+    boy1.sayHi = function(){
+        return `Hi! My name is ${this.name}`;
+    }
+    
+    console.info(boy1.sayHi()); 
+    var newBoy = deepClone(boy1);
+    console.info(newBoy.job); // => 'programmer'  成功
+    console.info(newBoy.sayHi()); // =>'Hi! My name is undefined'
+    console.info(newBoy.name); // => 'undefined'
+```
+　　当我测到这里的时候是一脸的懵逼状态，`newBody.name`的值并不是预想中的`'Bryan'`而是返回值`undefined`，意味着对象或者原型链中并没有包含`name`属性，通过查找可以知道`name`属性是`Bryan`对象继承而来的，也就是没有复制到继承的内容。在`Object`对象中有这么一个方法，可以根据现有对象提供的`__proto__`来创建新对象，也就是说可以根据现有对象提供的原型链来创建新对象，从而达到对原型链复制的目的。这个方法就是`Object.create()`，但是对于数组并不适用，继续对函数进行修改。
+
+```diff
+     // 创建 deepClone 函数
+    var deepClone = function fn(obj){
+        // 如果是非对象类型，直接返回
+        if(typeof obj !== 'object' || obj === null)return obj;
+        // 如果是正则或者是时间对象，则返回新的对象
+        // obj.constructor 返回对象的构造函数
+        if(obj instanceof RegExp || obj instanceof Date) return new obj.constructor(obj);
+        // 复杂数据类型，数组创建新的数组，对象创建新的对象
+-        let newObj = new obj.constructor();
++        let newObj = null;
++        if (Array.isArray(obj)) {
++            newObj = [];
++        } else {
++            newObj = Object.create(obj.__proto__);
++        }
+        for(let k in obj){
+            // 判断该属性是否为自身属性
+            // 递归复制
+            if(obj.hasOwnProperty(k)){
+                if(obj[k] === obj){
+                    newObj[k] = newObj;
+                }else{
+                    newObj[k] = fn(obj[k]);
+                }
+            }
+            
+        }
+        return newObj;
+    }
+```
+
+　　最终的结果如下：
+
+```javascript
+    var deepClone = function fn(obj) {
+        // 如果是非对象类型，直接返回
+        if (typeof obj !== 'object' || obj === null) return obj;
+        // 如果是正则或者是时间对象，则返回新的对象
+        // obj.constructor 返回对象的构造函数
+        if (obj instanceof RegExp || obj instanceof Date) return new obj.constructor(obj);
+        // 复杂数据类型，数组创建新的数组，对象创建新的对象
+        //  let newObj = new obj.constructor();
+        let newObj = Array.isArray(obj) ? [] : Object.create(obj.__proto__);
+        for (let k in obj) {
+            // 判断该属性是否为自身属性
+            // 递归复制
+            if (obj.hasOwnProperty(k)) {
+                if (obj[k] === obj) {
+                    newObj[k] = newObj;
+                } else {
+                    newObj[k] = fn(obj[k]);
+                }
+            }
+
+        }
+        return newObj;
+    }
+```
+
+　　继续进行测试，测试结果如下：
+```javascript
+    function Person(name, six) {
+        this.name = name;
+        this.six = six;
+    }
+    Person.prototype.category = '人属';
+
+    function Bryan(job, skill) {
+        this.job = job;
+        this.skill = skill;
+    }
+    Bryan.prototype = new Person('Bryan', '男');
+    var boy1 = new Bryan('programmer', [
+        ['HTML', 'CSS', 'JavaScript']
+    ]);
+    console.info(boy1);
+    boy1.sayHi = function () {
+        return `Hi! My name is ${this.name}`;
+    }
+    console.info(boy1.sayHi());
+    var newBoy = deepClone(boy1);
+    console.info(newBoy.job); // => 'programmer'
+    console.info(newBoy.category); // => '人属'
+    console.info(newBoy.sayHi()); // => 'Hi! My name is Bryan'
+    console.info(newBoy.name); // => 'Bryan'
+```
+　　测试了原型链的复制，再来测一下循环递归的问题：
+
+```javascript
+    var obj = {
+        name: 'Bryan',
+        b: {
+            c: 1,
+            d: 2
+        },
+        c: 3
+    };
+    obj.c = obj.b;
+    obj.b.c = obj.c;
+    
+    console.info(obj); // => { name: 'Bryan', b: { c: [Circular], d: 2 }, c: { c: [Circular], d: 2 } }
+    var newObj = deepClone(obj);
+    console.info(obj === newObj); // => false
+    obj.c = 'clear';
+    console.info(obj); // => { name: 'Bryan', b: { c: [Circular], d: 2 }, c: 'clear' }
+    console.info(newObj); // => { name: 'Bryan', b: { c: [Circular], d: 2 }, c: { c: [Circular], d: 2 } }
+```
+
+　　至此可以发现，该方法能够基本满足所有的深拷贝情况。
