可迭代对象

--- a/网络文章尝试/可迭代对象.md
+++ b/网络文章尝试/可迭代对象.md
@@ -1,6 +1,7 @@
 可迭代对象可通过 `for...of `进行循环。
 
-模拟迭代器：
+#### 迭代器的模拟
+　　模拟迭代器：
 
 ```javascript
     function makeIterator(arr) {
@@ -27,14 +28,15 @@
 
 > 为了实现可迭代，一个对象必须实现 iterator 方法，这意味着这个对象（或其原型链中的一个对象）必须具有带 Symbol.iterator 键的属性
 
-判断当前对象是否为可迭代对象，检测该对象是否具备 `Symbol.iterator` 属性。
+#### 检测可迭代对象
+　　判断当前对象是否为可迭代对象，检测该对象是否具备 `Symbol.iterator` 属性。
 
 ```javascript 
     // 以数组为例
     Array.prototype.hasOwnProperty(Symbol.iterator); // => true
 ```
 
-可通过检测当前对象是否具有`Symbol.iterator`属性来判断当前对象是否为可迭代对象。`Symbol.iterator` 是一个函数，所以通过`typeof`来检测返回值，如果返回值为`'function'`则为可迭代对象，如果返回值为`'undefined'`则为不可迭代对象。
+　　可通过检测当前对象是否具有`Symbol.iterator`属性来判断当前对象是否为可迭代对象。`Symbol.iterator` 是一个函数，所以通过`typeof`来检测返回值，如果返回值为`'function'`则为可迭代对象，如果返回值为`'undefined'`则为不可迭代对象。
 
 ```javascript
     typeof [][Symbol.iterator]; // => 'function'
@@ -49,8 +51,8 @@
         typeof arguments[Symbol.iterator]; // => 'function'
     })();
 ```
-
-原生具备 Iterator 接口的数据结构如下。
+#### 原生可迭代对象
+　　原生具备 Iterator 接口的数据结构如下。
 
 - Array
 - Map
@@ -71,7 +73,8 @@
     si.next(); //=> {value: undefined, done: true}
 ```
 
-如何实现一个自定义的可迭代对象：
+#### 可迭代对象的实现
+　　如何实现一个自定义的可迭代对象：
 
 ```javascript
     var myIterator = {};
@@ -110,7 +113,7 @@
     // bachelordom
 ```
 
-**总结**
+#### 总结
 
 可迭代对象的特点：
 - 可使用 `for...of` 进行循环； 
