原型链继承完善

--- a/网络文章尝试/继承/原型链继承.md
+++ b/网络文章尝试/继承/原型链继承.md
@@ -34,3 +34,66 @@
     console.info(erHa.cry()); // => 嘤嘤嘤
     console.info(erHa.run()); // => 鸭子类型
 ```
+
+#### 方法的添加与修改
+　　当子类型中需要添加超类型中没有的方法，或者是需要重写超类型中的方法时，需要注意，应该先完成继承再进行方法的添加或重写。如下方代码：
+```javascript
+    // 声明超类型
+    function Animal(name,six){
+        this.name = name;
+        this.six = six;
+    }
+    // 超类型中的方法
+    Animal.prototype.cry = function(){
+        return '嘤嘤嘤';
+    }
+
+    // 声明子类
+    function Dog(name,age){
+        this.name = name;
+        this.age = age;
+    }
+
+    // 完成继承
+    Dog.prototype = new Animal('狗','boy');
+
+    // 重写超类型的方法
+    Dog.prototype.cry = function(){
+        return '汪汪汪';
+    }
+    // 添加新的方法
+    Dog.prototype.run = function(){
+        return '鸭子类型';
+    }
+
+    var erHa = new Dog('哈士奇',5);
+    console.info(erHa.cry()); // => '汪汪汪'
+```
+
+#### 原型链继承的问题
+　　原型链继承有两个不可避免的问题。
+ - 当其中一个实例对原型链中的属性进行了改写，则所有的实例都将发生变化。(这里需要注意的是，该属性属性值为复杂类型)
+ - 在创建对象实例时，是不能直接想超类的构造函数中传递参数的。
+
+```javascript
+    function Animal(name,six){
+        this.name = name;
+        this.six = six;
+    }
+
+    function Dog(name,age){
+        this.name = name;
+        this.age = age;
+    }
+    Dog.prototype = new Animal('狗','body');
+    var erHa = new Dog('哈士奇',5);
+    erHa.six = 'girl';
+    var mao = new Dog('金毛',8);
+    console.info(mao.six);
+```
+**引用**
+>**优点：**
+>  引用类型的方法被所有实例共享。
+>**缺点：**
+>  - 通过原型来实现继承时，原型会变成另一个类型的实例，原先的实例属性变成了现在的原型属性，该原型的引用类型属性会被所有的实例共享。
+>  - 在创建子类型的实例时，没有办法在不影响所有对象实例的情况下给超类型的构造函数中传递参数。
